fix dashboard chart and summry data

--- a/public/assets/css/argon-dashboard.css
+++ b/public/assets/css/argon-dashboard.css
@@ -9567,6 +9567,15 @@ textarea.form-control-lg {
 .bg-desil-4 {
   background-color: #C4A128 !important;
 }
+.bg-desil-5 {
+  background-color: #993d7f !important;
+}
+.bg-desil-6 {
+  background-color: #b54796 !important;
+}
+.bg-desil-7 {
+  background-color: #fa89db !important;
+}
 
 .bg-gray-200 {
   background-color: #e9ecef !important;
